Add README in the repo

--- a/MAE5009Note.tex
+++ b/MAE5009Note.tex
@@ -294,7 +294,7 @@
     \end{equation}
     From the Equation~\ref{eq:029}, there are 6 independent unkowns in total, while only 3 equations. Thus additional equations are needed to complete the solutions of the stress distribution in a body. For example, Strain-displacement, Generalized Hooke's Law, etc.
 
-
+\section{Strain Analysis}
 
 
 \end{document}
