Add some part of Charpter3

--- a/MAE5009Note.tex
+++ b/MAE5009Note.tex
@@ -641,4 +641,66 @@
   \end{equation}
 
 
+\section{Stress Strain Relations}\label{sec:03}
+
+  So far we have unknowns for 6 stress, 6 strain and 3 displacement components:
+
+  \begin{equation}\label{eq:051}
+    [\sigma]=
+    \begin{bmatrix}
+      \sigma_x & \tau_{xy} & \tau_{xz}\\
+        & \sigma_y & \tau_{yz}\\
+      Sym. &   & \sigma_z
+    \end{bmatrix}, \quad
+    [\varepsilon]=
+    \begin{bmatrix}
+      \varepsilon_x & \varepsilon_{xy} & \varepsilon_{xz}\\
+        & \varepsilon_y & \varepsilon_{yz}\\
+      Sym. &   & \varepsilon_z
+    \end{bmatrix}, \quad
+    [u]=[u, v, w]
+  \end{equation}
+
+  And we have 3 equilibrium equations(\cref{eq:029}), 6 strain-displacement equations(\cref{eq:042}) and 6 strain compatibility equations(\cref{eq:043})：
+
+  \begin{equation}\label{eq:052}
+    \left\{
+      \begin{aligned}
+        \frac{\partial \sigma_{x}}{\partial x} + \frac{\partial \tau_{yx}}{\partial y} + \frac{\partial \tau_{zx}}{\partial z} + f_{x} = 0 \\
+        \frac{\partial \tau_{xy}}{\partial x} + \frac{\partial \sigma_{y}}{\partial y} + \frac{\partial \tau_{zy}}{\partial z} + f_{y} = 0 \\
+        \frac{\partial \tau_{xz}}{\partial x} + \frac{\partial \tau_{yz}}{\partial y} + \frac{\partial \sigma_{z}}{\partial z} + f_{z} = 0
+      \end{aligned}
+    \right.
+    , \quad
+    \left\{
+      \begin{aligned}
+        \varepsilon_{x} &= \frac{\partial u}{\partial x} & \varepsilon_{y} &= \frac{\partial v}{\partial y} & \varepsilon_{z} &= \frac{\partial w}{\partial z} \\
+        \gamma_{xy} &= \frac{\partial u}{\partial y} + \frac{\partial v}{\partial x} & \gamma_{yz} &= \frac{\partial v}{\partial z} + \frac{\partial w}{\partial y} & \gamma_{zx} &= \frac{\partial w}{\partial x} + \frac{\partial u}{\partial z}
+      \end{aligned}
+    \right.
+  \end{equation}
+
+  \begin{equation}\label{eq:053}
+    \left\{
+      \begin{aligned}
+        \frac{\partial^2 \epsilon_x}{\partial y^2} + \frac{\partial^2 \epsilon_y}{\partial x^2} &= \frac{\partial^2 \gamma_{xy}}{\partial x \partial y} \\
+        \frac{\partial^2 \epsilon_y}{\partial z^2} + \frac{\partial^2 \epsilon_z}{\partial y^2} &= \frac{\partial^2 \gamma_{yz}}{\partial y \partial z} \\
+        \frac{\partial^2 \epsilon_z}{\partial x^2} + \frac{\partial^2 \epsilon_x}{\partial z^2} &= \frac{\partial^2 \gamma_{zx}}{\partial z \partial x}
+      \end{aligned}
+    \right.
+    , \quad
+    \left\{
+      \begin{aligned}
+        2 \frac{\partial^2 \epsilon_x}{\partial y \partial z} &= \frac{\partial}{\partial x} \left( -\frac{\partial \gamma_{yz}}{\partial x} + \frac{\partial \gamma_{zx}}{\partial y} + \frac{\partial \gamma_{xy}}{\partial z} \right) \\
+        2 \frac{\partial^2 \epsilon_y}{\partial z \partial x} &= \frac{\partial}{\partial y} \left( \frac{\partial \gamma_{yz}}{\partial x} - \frac{\partial \gamma_{zx}}{\partial y} + \frac{\partial \gamma_{xy}}{\partial z} \right) \\
+        2 \frac{\partial^2 \epsilon_z}{\partial x \partial y} &= \frac{\partial}{\partial z} \left( \frac{\partial \gamma_{yz}}{\partial x} + \frac{\partial \gamma_{zx}}{\partial y} - \frac{\partial \gamma_{xy}}{\partial z} \right)
+      \end{aligned}
+    \right.
+  \end{equation}
+
+  \subsection{Assupmtions}
+  Linear elastic, isotropic, homogeneous, linear stress-strain relations.
+
+  
+
 \end{document}
